updated donegal and edardpayne

--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -25,6 +25,12 @@
                 <div class="content-link"><a href="#grants">Grants</a></div>
         		<div class="content-link"><a href="#land">Land</a></div>
                 <div class="content-link"><a href="#internetResearch">Internet Research</a></div>
+                <div class="content-link"><a href="#garden">Garden & Plants</a></div>
+                <div class="content-link"><a href="#heating">Heating</a></div>
+                <div class="content-link"><a href="#electric">Electric</a></div>
+                <div class="content-link"><a href="#passivhaus">Passiv Haus</a></div>
+                <div class="content-link"><a href="#strawBale">Straw Bale Walls</a></div>
+                <div class="content-link"><a href="#openQuestions">Open Questions</a></div>
             </div>
         </div>
         <div class="row content-section">
@@ -206,7 +212,92 @@
                 </div>
             </div>
         </div>
+
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="garden">Garden & Plants</div>
+                <div>
+                    <h5>GARDEN PLAN</h5>
+                    <ul>
+                        <li>Early years - Plant rows of trees and bushes anywhere we might possibly want the view blocked - then later we can remove whatever we don't want (e.g. elements that block the view). Plant in rows, or patches of higher and lower variation so we can be flexible about what stays and have more options</li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>CONIFERS</h5>
+                    <a href="https://futureforests.ie/collections/native-conifers">https://futureforests.ie/collections/native-conifers</a> sells and has information about native irish conifers, and may be able to advise what to plant.
+                </div>
+                <div>
+                    <h5>WILLOW</h5>
+                    <p>Willow is a good choice for donegal. It can grow in crappy soil, grows quickly, and is useful for living fences, creating elements to obscure unwanted things from view to choreograph your view (e.g. hide your building, or other peoples buildings), and provides materials for weaving, and potentilly is a coppicing wood source. </p>
+                    <p>
+                    Sheep will eat the willow buds which will reduce growth, so initially it would need protection from sheep. Pollarding would also be an option (pollarding involves cutting at a height rather than at ground level - in this case cutting above a height that sheep can reach)
+                    </p>
+                    <ul>
+                        <li>Hanna Van Aelst, sells willow cuttings of a variety of species. Has a youtube channel with a lot of info - <a href="https://www.hannavanaelst.com/">https://www.hannavanaelst.com/</a></li>
+                        <li>Really good video. Using willow as a fence, basket source, etc. etc. - <a href="
+                https://www.youtube.com/watch?v=MPR0-06L2ks">
+                https://www.youtube.com/watch?v=MPR0-06L2ks</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h5>WILD FLOWERS</h5> 
+                    <a href="https://www.wildflowers.ie/all-trade/a0-all-pricelists.htm">wildflowers.ie</a> sell seeds and have info about wildflowers. They are a bit expensive, but seem very professional and would provide advice
+                </div>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="heating">Heating</div>
+                Possibilities:
+                <ul>
+                    <li>Ground source heat pump</li>
+                    <li><a href="https://www.tepeo.com/costandcarbon">Tepeo</a> uses off peak electric for heating (possibly combined with solar</li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="electric">Electric</div>
+                Solar on the roof would make sense, in which case a maximum area of south facing roof would be desired. To achieve this, an asymmetrical roof that slopes all or mostly north to south would be desirable. <br>
+                Additional solar panels could be added to a lean-to structure along the south wall if they are needed <br>
+                Battery bank would be an option. Lithium phosphate batteries can be found fairly cheaply (close to 100EUR per Kwh) at <a href="https://ru.nkon.nl/">https://ru.nkon.nl/</a> for example, or sodium batteries may become popular and undercut lithium.
+                <br>
+                See <a href="https://www.youtube.com/@WillProwse">https://www.youtube.com/@WillProwse</a> for details of solar, battery, inverter etc. systems
+
+                <ul>
+                    <li><a href="https://www.youtube.com/watch?v=-3dNJAe8XEc">Top 10 Beginner Mistakes When Building a DIY Solar System</a> </li>
+                    <li><a href="https://www.youtube.com/watch?v=x8SJ1uTg9rA&t=13s">Victron Made Easy! Design and Communication, Step-by-Step
+</a> - he seems to rate victron components highly</li>
+                    <li><a href="https://www.youtube.com/watch?v=qbg4k0Oh55c">Will Prowse's Favorite Electrical Tools! For DIY Solar Projects
+</a></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="passivhaus">Passiv Haus</div>
+                <a href="https://passipedia.org/">Passipedia</a> contains a lot of info on passiv haus construction
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="strawBale">Straw Bale Walls</div>
+                <a href="https://ecococon.eu/gb/">https://ecococon.eu/gb/</a> make prefab sectional straw bale walls, and contains information on construction <a href="https://ecococon.eu/gb/about/straw-bale-construction">https://ecococon.eu/gb/about/straw-bale-construction</a><br>
+                <a href="https://www.architekturgemeinschaft15.it/portfolio/haus-s/">https://www.architekturgemeinschaft15.it/portfolio/haus-s/</a>
+            </div>
+        </div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="openQuestions">Open Questions</div>
+                Would willow roots affect ground source heat pump underground tubing?
+            </div>
+        </div>
     </div>
+
+
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
