--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -8,7 +8,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/styles.css" type="text/css">
+    <link rel="stylesheet" href="../css/styles.css" type="text/css">
     <title>Donegal</title>
 </head>
 
@@ -92,7 +92,6 @@
                 <div>
                     <h5>MOBILE UNLIMITED DATA SIM with BROADBAND ROUTER</h5>
                     Popular options, all 20EUR per month or less include. <br>
-                    When choosing a router, use one that allows you to find out which cell tower you're connected to. The tp link I have doesn't allow that and it's a pain.
                     <ul>
                         <li>3.ie (Three)</li>
                         <li>48.ie (Three)</li>
@@ -101,7 +100,7 @@
                     </ul>
                 </div>
                 <div>
-                    <strong>COVERAGE</strong><br>
+                    <strong>COVERAGE QUALITY</strong><br>
                     As of 23.05.2023, 4G coverage from Eir is good, Vodafone is fair, Three is fringe. <br>
                     <a href="https://coveragemap.comreg.ie/map?location=55.2006542,-7.523891600000001&technology=4g&network=three&place_id=ChIJXZcGxbv5X0gR1hw3wxATa6A">Coverage map from comreg here</a>
                 </div>
@@ -144,6 +143,10 @@
                             </tr>
                         </tbody>
                     </table>
+                </div>
+                <div>
+                    <br><strong>CHOOSING A ROUTER</strong><br>
+                    When choosing a router, use one that allows you to find out which cell tower you're connected to. The tp link I have in zurich doesn't allow that and it's a pain. Something like a Huawei B535, or newer version would be better.
                 </div>
                 <div>
                     <br><strong>EXTERNAL ANTENNA</strong><br>
@@ -240,9 +243,21 @@
                     </ul>
                 </div>
                 <div>
+                    <h5>HAZEL FENCING</h5>
+                    <a href="https://www.youtube.com/watch?v=mvhlCeX28N8">https://www.youtube.com/watch?v=mvhlCeX28N8</a> tells how to make a Dorset Hurdle (woven hazel fence). Potentially, circular hurdles  could be made, to put around the base of young trees and protect them from sheep.
+                <div>
                     <h5>WILD FLOWERS</h5> 
                     <a href="https://www.wildflowers.ie/all-trade/a0-all-pricelists.htm">wildflowers.ie</a> sell seeds and have info about wildflowers. They are a bit expensive, but seem very professional and would provide advice
                 </div>
+            </div>
+        </div>
+
+                <div class="content-link"><a href="#mapping">Mapping the site</a></div>
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="mapping">Mapping the site</div>
+                <a href="https://www.youtube.com/watch?v=QUX9_1fRnlo">https://www.youtube.com/watch?v=QUX9_1fRnlo</a> from 
+OTENBuildingCourses has some good info on using a Theodilite. 
             </div>
         </div>
         <div class="row content-section">
