updated some donegal stuff and airbnb

--- a/Tonduff/DonegalTonduff.html
+++ b/Tonduff/DonegalTonduff.html
@@ -31,6 +31,7 @@
                 <div class="content-link"><a href="#passivhaus">Passiv Haus</a></div>
                 <div class="content-link"><a href="#strawBale">Straw Bale Walls</a></div>
                 <div class="content-link"><a href="#openQuestions">Open Questions</a></div>
+                <div class="content-link"><a href="#fishing">Fishing and Diving</a></div>
             </div>
         </div>
         <div class="row content-section">
@@ -308,6 +309,18 @@ OTENBuildingCourses has some good info on using a Theodilite.
             <div class="col-12 row-content">
                 <div class="h4" id="openQuestions">Open Questions</div>
                 Would willow roots affect ground source heat pump underground tubing?
+            </div>
+        </div>
+        
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="fishing">Fishing and Diving</div>
+                <ul>
+                    Chats about fishing and collecting Shellfish
+                    <li><a href="https://chat.openai.com/c/feeb12f8-4aca-4542-9924-a754cf925ed3">Spearfishing Chat - Choosing and using a spear gun</a></li>
+                    <li><a href="https://chat.openai.com/c/e05bfb2e-7127-440d-9fbe-5822d1b89a25">Diving for Scallops</a></li>
+                    <li><a href="https://chat.openai.com/c/feb288d8-3488-4c01-a158-5679be4415c0">Fish types around Donegal</a></li>
+                </ul>
             </div>
         </div>
     </div>
