added sewing page and readme

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <a href="wood/CookingForGroups.html">Cooking For Groups</a>
                         <a href="LatexCheatsheet.html">Latex Cheatsheet</a>
                         <a href="gardening/gardening.html">Gardening</a>
+                        <a href="sewing/sewing.html">Sewing</a>
                     </div>
                 </div>
             </div>
