updated sewing info

--- a/sewing/sewing.html
+++ b/sewing/sewing.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css" type="text/css">
-    <title>Sewing Projects</title>
+    <title>Sewing</title>
 </head>
 
 <body>
@@ -27,8 +27,12 @@
                 <div class="content-link"><a href="#starting-stopping-backstitching">Basics: Starting, Stopping and Backstitching</a></div>
                 <div class="content-link"><a href="#ironing-clapper">Basics: Ironing (Pressing) and Use of a Clapper</a></div>
                 <div class="content-link"><a href="#thread-weights">Basics: Thread Weights</a></div>
-                <div class="content-link"><a href="#printable-templates">Basics: Printable Templates for Sewing Practice</a></div><br>
-                <div class="content-link"><a href="#troubleshooting">Troubleshooting Common Issues</a></div><br>
+                <div class="content-link"><a href="#needles">Basics: Needles</a></div>
+                <div class="content-link"><a href="#printable-templates">Basics: Printable Templates for Sewing Practice</a></div>
+                <div class="content-link"><a href="#hand-sewing">Basics: Hand Sewing and Basting</a></div>
+                <br>
+                <div class="content-link"><a href="#troubleshooting">Troubleshooting Common Issues</a></div>
+                <br>
                 <div class="content-link"><a href="#pillowcase">Project: Pillowcase</a></div>
                 <div class="content-link"><a href="#jeans">Project: Jeans</a></div>
             </div>
@@ -41,22 +45,21 @@
 
                 <h5>1. Hand Positioning and Movement</h5>
                 <ul>
-                    <li><strong>Guide, Don’t Push:</strong> Use your hands to guide the fabric, but let the feed dogs do the work of moving it forward. Your hands should guide the fabric along the intended path lightly.</li>
+                    <li><strong>Light hands:</strong> Guide the fabric along the intended path lightly, but let the feed dogs do the work of moving it forward.</li>
                     <li><strong>Be Smooth:</strong> Ensure that all movements are smooth, both when guiding the fabric in a straight line and when sewing curves.</li>
                     <li><strong>Relax Your Shoulders:</strong> Keep your shoulders relaxed to avoid transferring tension into your hands, which can lead to jerky or uneven fabric handling.</li>
-                    <li><strong>Even Pressure:</strong> Apply even, gentle pressure with both hands—one in front of the needle guiding the fabric, and the other behind helping to keep it straight.</li>
                 </ul>
 
                 <h5>2. Holding the Fabric</h5>
                 <ul>
-                    <li><strong>Flat and Taut, Not Stretched:</strong> Keep the fabric flat and taut, but avoid stretching it, which can lead to distorted seams and puckering.</li>
-                    <li><strong>Use Your Fingertips:</strong> Use your fingertips, not your palms, when guiding fabric through the machine for better control and sensitivity.</li>
+                    <li><strong>Taut, Not Stretched:</strong> Keep the fabric flat and taut, but avoid stretching it, which can lead to distorted seams and puckering.</li>
+                    <li><strong>Fingertips:</strong> Use your fingertips, not your palms, when guiding fabric through the machine for better control and sensitivity.</li>
                 </ul>
 
                 <h5>3. Pin Placement</h5>
-                <p>When pinning fabric pieces together, place pins perpendicular to the seam line, with the head of the pin facing outward. This makes it easier to remove pins as you sew and helps keep fabric layers aligned correctly.</p>
+                <p>Place pins perpendicular to the seam line, with the head facing outward. This makes it easier to remove pins as you sew and helps keep fabric layers aligned correctly.</p>
 
-                <h5>4. Where to Look While Sewing</h5>
+                <h5>4. Where to Look</h5>
                 <ul>
                     <li><strong>Focus Ahead of the Needle:</strong> Look slightly ahead of the needle to maintain a straight line and spot issues before they reach the needle.</li>
                     <li><strong>Peripheral Vision:</strong> Use your peripheral vision to monitor both the fabric’s edge and seam allowance for consistent stitching.</li>
@@ -65,9 +68,9 @@
 
                 <h5>5. General Tips</h5>
                 <ul>
-                    <li><strong>Watch Out for Dragging and Pulling:</strong> Ensure your sewing area is spacious enough to avoid fabric buildup, pulling, or bunching.</li>
+                    <li><strong>Manage the Space:</strong> Ensure your sewing area has enough space. If the fabric is falling off the table, or bunching up too much, it will cause problems.</li>
+                    <li><strong>Don't let fabric bully you:</strong> Larger or heavier fabrics can easily drag or pull, especially if space is limited or they build up in the throat. This will pull your sewing off line. Manage the fabric carefully and only sew when it is under control</li>
                     <li><strong>Practice on Fabric Scraps:</strong> Before starting a project, practice on fabric scraps of the same material to adjust for sewing, seaming, and thread tension.</li>
-                    <li><strong>Use Both Hands for Large Projects:</strong> Support larger or heavier fabrics with both hands to prevent dragging or pulling, which could affect your seams.</li>
                 </ul>
             </div>
         </div>
@@ -200,6 +203,66 @@
             </div>
         </div>
 
+        <!-- Basics: Needles Section -->
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="needles">Basics: Needles</div>
+
+                <h5>Common Sewing Machine Needle Sizes and Uses</h5>
+                <table border="1" cellpadding="10" cellspacing="0">
+                    <thead>
+                        <tr>
+                            <th>Needle Size (European)</th>
+                            <th>Needle Size (American)</th>
+                            <th>Common Uses</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>60/8</td>
+                            <td>8</td>
+                            <td>Fine fabrics such as silk or organza</td>
+                        </tr>
+                        <tr>
+                            <td>70/10</td>
+                            <td>10</td>
+                            <td>Lightweight fabrics such as cotton lawn or voile</td>
+                        </tr>
+                        <tr>
+                            <td>80/12</td>
+                            <td>12</td>
+                            <td>Medium-weight fabrics such as cotton, polyester, linen</td>
+                        </tr>
+                        <tr>
+                            <td>90/14</td>
+                            <td>14</td>
+                            <td>Heavy fabrics such as denim, canvas, or upholstery fabric</td>
+                        </tr>
+                        <tr>
+                            <td>100/16</td>
+                            <td>16</td>
+                            <td>Very heavy fabrics such as thick upholstery or multiple layers of denim</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h5>Schmetz Sewing Needle Color System</h5>
+                <p>Schmetz has a color system to identify needle types and sizes. Click the image below to view the Schmetz Sewing Needle Color System:</p>
+                <a href="SchmetzColorSystem.webp" target="_blank">
+                    <img src="SchmetzColorSystem.webp" alt="Schmetz Needle Color System" style="width: 300px;">
+                </a>
+
+                <h5>Common Types of Needles</h5>
+                <ul>
+                    <li><strong>Universal Needles:</strong> A general-purpose needle suitable for most woven and knit fabrics. Commonly used for everyday sewing tasks.</li>
+                    <li><strong>Ballpoint Needles:</strong> Designed for sewing knit fabrics. The rounded tip allows the needle to pass between the fabric threads without damaging them.</li>
+                    <li><strong>Jeans/Denim Needles:</strong> A stronger needle with a thicker shaft designed to handle heavy fabrics like denim and canvas.</li>
+                    <li><strong>Stretch Needles:</strong> Similar to ballpoint needles but with a special eye and scarf to prevent skipped stitches when working with highly elastic fabrics.</li>
+                    <li><strong>Quilting Needles:</strong> Made to sew through multiple layers of fabric and batting, with a slightly rounded point for precise stitching.</li>
+                    <li><strong>Topstitching Needles:</strong> Features a larger eye and sharper point for handling thicker topstitching threads and for decorative stitching.</li>
+                </ul>
+            </div>
+        </div>
 
         <!-- Basics: Printable Templates for Sewing Practice Section -->
         <div class="row content-section">
@@ -209,6 +272,20 @@
                 <ul>
                     <li><a href="jeans fly.svg" target="_blank">Jeans Fly Template</a></li>
                     <li><a href="jeans pocket curve.svg" target="_blank">Jeans Pocket Curve Template</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+        <!-- Basics: Printable Templates for Sewing Practice Section -->
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="hand-seing">Basics: Hand Sewing and Basting</div>
+                <p>First fact: The thimble is for pushing the needle through from behind, not protecting from pricking</p>
+                <p>Below links to hend sewing tutorials:</p>
+                <ul>
+                    <li><a href="https://youtu.be/e-4nShYLvl8?si=VM1-JXHc-Z95uR59" target="_blank">Needle and Thimble Coordination with thread</a></li>
+                    <li><a href="https://youtu.be/qxhBB0aH6Qg?si=qS-JNe4JxKYRv_HV" target="_blank">Basting</a></li>
                 </ul>
             </div>
         </div>
@@ -298,19 +375,56 @@
                     <li><strong>Pocket Lining Material:</strong> Poplin (Popeline in german) or twill (see this recommended on sewing forums) is a good choice for durability - Cotton-poly is stronger than just cotton. Ensure the warp is running vertically for max strength (warp is the threads long the roll, weft are across). Old shirts with durable fabric are a possibility for pocket lining or waistband lining <br><a href="https://www.contrado.co.uk/">Contrado.co.uk</a> have a lot of fabrics (also EU site) or woven monkey is an option </br></li>
                     <li><strong>Needle Selection:</strong> Use denim needles (Schmetz brand recommended) and switch to topstitching needles for thick thread, as they have a larger hole for easier threading and better topstitching.</li>
                     <li><strong>Topstitching Tips:</strong> Use a Topstitching Needle (Schmetz make these) which has a larger eye and may provide better results. Use thick thread in the needle but regular thread in the bobbin to avoid tension issues. Needle tension may need to go as high as 8-10 for balanced topstitching.</li>
-                    <li><strong>Hump Jumper:</strong> To sew over thick or uneven layers (like belt loops or crotch seams), use a hump jumper or similar tool to stop the foot getting stuck. You can also use a chunk of fabric for this - see <a href="https://youtu.be/KzbwPuUC598?si=2HFVSt8yc3wADPUP&t=342">t his video showing hump jumper</a></li>
-                    <li><strong>Press Template for Pockets:</strong> Create a press template from firm paper to shape pocket edges sharply. This ensures clean, professional-looking back pockets.</li>
+                    <li><strong>Hump Jumper:</strong> To sew over thick or uneven layers (like belt loops or crotch seams), use a hump jumper to stop the foot getting stuck. Make a few of different thicknesses, by folding and sewing multiple layers of fabric together - see <a href="https://youtu.be/KzbwPuUC598?si=2HFVSt8yc3wADPUP&t=342">t his video showing hump jumper</a></li>
+                    <li><strong>Press Template for Pockets and waistband:</strong> Create a press template from card to shape pocket edges sharply when ironing hems. This ensures clean, professional-looking back pockets. Haven't seen this but can probably uses something similar when pressing waistband hems. <a href="https://youtu.be/7THig2NTorI?si=qmmb-w06-7oRtU9q&t=744">See this video</a></li>
+                    <li><strong>Fly Template:</strong> Make a fly template to help sewing flw from the front<a href="https://youtu.be/7THig2NTorI?si=qmmb-w06-7oRtU9q&t=840">See this video</a></li>
                     <li><strong>Edge Guide Presser Foot:</strong> An edge guide presser foot, which has a small blade or slot, is invaluable for achieving straight and even topstitching. By aligning the blade with the fabric edge, you can easily maintain an even distance from the edge</li>
                     <li><strong>Avoid Bulky Backstitching:</strong> Backstitching with heavy topstitching thread can create big bumps. Tie thread ends instead</li>
+                    <li><strong>Baste or tape the waistband:</strong> You can baste or use water-soluble double-sided tape (e.g. Prym Wonder Tape) on the inner waistband to keep it in place when topstitching.</li>
+                    <li><strong>Interfacing:</strong> Interfacing is useful, especially on the waistband and fly. See <a href="https://youtu.be/7THig2NTorI?si=vt7HXYeOjnoNonfa&t=108"> this video from The Last Stitch</a></li>
+                </ul>
+
+
+                <h5>Overview</h5>
+                <ul>
+                    <li><a href="https://youtu.be/ZQNHmrAFrzo?si=ZgLG0SLgX-DgSG_m">Overview from The Last Stitch</a> including denim choice, sewing order, needles and press templates</li>
                 </ul>
 
                 <h5>Step Details</h5>
                 <ul>
-                    <li><strong>Hand sewn button holes:</strong> <a href="buttonholes.mp4">Video by Elegancelite</a></li>
+                    <li>Full Video Tutorial List from The Last Stitch, <a href="https://youtube.com/playlist?list=PLYLu6Y2YN78W6wkdQTRXd8nfMV1HTJkFR&si=xQ_7TgiXe7eDli_3">available here</a></li>
+                    <li></li>
+                    <li><strong>Front pocket: The Last Stitch. Lots of really good details and tips</strong> <a href="https://youtu.be/oGrgk96yFcM?si=9LCQJ0kprGHkX-r5">Video</a></li>
+                    <li><strong>Hand sewn button holes:</strong> <a href="buttonholes.mp4">Video by Elegancelite</a>,  <a href="https://www.youtube.com/watch?v=sjHZiyrACkY">Tutorial by Maurice Sedwell</a></li>
+                    <li><strong>Fly details: The Last Stitch</strong> <a href="https://youtu.be/JXPmXO73uxs?si=biPscYkuTBSlJmVp">Video</a></li>
+                </ul>
+
+                <h5>Small Video Tips</h5>
+                <ul>
                     <li><strong>Hammer seams to ease sewing:</strong> <a href="hammerseam.mp4">Video</a></li>
                     <li><strong>Parallel top stitching seams:</strong>  <a href="paralleltopstitch.mp4">Video</a></li>
-
+                    <li><strong>Bar Tacks:</strong><a href="https://youtu.be/GN75dvioDJ0?si=yVk0y7gvnN0T2s9_&t=291">Video</a></li>
+                    <li><strong>Basting Stitch:</strong>  <a href="https://youtu.be/qxhBB0aH6Qg?si=PYdlu2WFnSz6rZPB">Video</a></li>
                 </ul>
+
+                <h5>Order of Sewing</h5>
+                    <a href="Order Of Sewing.png" target="_blank">
+                        <img src="Order Of Sewing.png" alt="Order of Sewing" style="width: 600px;">
+                    </a>
+
+                <ol>
+                    <li><strong>Front Pockets</strong>: Do as much detail work as possible before sewing pieces together. This includes sewing the front pockets first.</li>
+                    <li><strong>Fly</strong>: After the front pockets, attach the zipper to the front pieces while they are still flat.</li>
+                    <li><strong>Sew Yoke to the Back Pieces</strong>: Move to the back pieces and sew the yoke before continuing with other back details.</li>
+                    <li><strong>Crotch Seams</strong>: After completing the front and back detail work, sew the crotch seams.</li>
+                    <li><strong>Back Pockets</strong>: Attach the back pockets after sewing the crotch seams.</li>
+                    <li><strong>Inseams</strong>: Sew the inseams, starting from the hem of one leg and continuing through to the hem of the other leg.</li>
+                    <li><strong>Outer Seams</strong>: Sew the outer seams of the legs from top to bottom.</li>
+                    <li><strong>Waistband</strong>: Attach the waistband</li>
+                    <li><strong>Belt Loops</strong>: Add belt loops</li>
+                    <li><strong>Hem the Legs</strong>: </li>
+                </ol>
+
             </div>
         </div>
 
