updated sewing page

--- a/sewing/sewing.html
+++ b/sewing/sewing.html
@@ -33,8 +33,11 @@
                 <br>
                 <div class="content-link"><a href="#troubleshooting">Troubleshooting Common Issues</a></div>
                 <br>
+                <div class="content-link"><a href="#Consumables">My Consumables (Thread, Needles etc.)</a></div>
+                <br>
                 <div class="content-link"><a href="#pillowcase">Project: Pillowcase</a></div>
                 <div class="content-link"><a href="#jeans">Project: Jeans</a></div>
+                <div class="content-link"><a href="#jeans-repair">Project: Jeans Repair</a></div>
             </div>
         </div>
 
@@ -78,6 +81,9 @@
         <div class="row content-section">
             <div class="col-12 row-content">
                 <div class="h4" id="starting-stopping-backstitching">Basics: Starting, Stopping and Backstitching</div>
+
+                <h5>Starting in a precise position</h5>
+                <p>With the presser foot up, use the handwheel to manually lower the needle into the fabric where you want to start sewing. This anchors the fabric in place and will prevent it from moving when the feed dogs engage.</p>
 
                 <h5>What is Backstitching?</h5>
                 <p>Backstitching is essentially about reinforcing the start and end of a seam by sewing a few stitches forward, then reversing (sewing backward) over those stitches, and then sewing forward again along the seam line.</p>
@@ -318,6 +324,20 @@
             </div>
         </div>
 
+        <!-- Troubleshooting Section -->
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="Consumables">My Consumables (Thread, Needles etc.)</div>
+                
+                <h5>Threads</h5>
+                <p><strong>Gütermann All sewing (Sew-All) 1000m </strong> <a href="https://www.galaxus.ch/en/s2/product/guetermann-all-sewing-1000-m-1000-m-thread-yarn-15696008">Galaxus</a>
+                    <br>General purpose thread. Using for pillowcases etc.
+                </p>
+                    
+
+            </div>
+        </div>
+
         <!-- Project: How to Make a Pillowcase -->
         <div class="row content-section">
             <div class="col-12 row-content">
@@ -428,6 +448,15 @@
             </div>
         </div>
 
+
+        <!-- Project: Jeans Repair -->
+        <div class="row content-section">
+            <div class="col-12 row-content">
+                <div class="h4" id="jeans-repair">Project: Jeans Repair</div>
+                <p>Japanese guy repairing jeans on <a href="https://www.youtube.com/watch?v=zPxZg3QRGmg">Youtube</a></p>
+                <p><a href="https://youtu.be/B3iSybGF9No?si=mZdFB2Vy0ZuBfo_e">Crotch Repair by Hiut Denim Co</a></p>
+            </div>
+        </div>
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
